# Cascade

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/plans/: 2026-03-10-comprehensive-review-design.md  2026-03-10-comprehensive-review-plan.md
docs/reviews/: area-1-core-backend-review.md  area-10-cross-cutting-review.md  area-2-editor-engine-review.md  area-3-stores-state-review.md  area-4-main-ui-shell-review.md  area-5-feature-uis-review.md  area-6-canvas-review.md  area-7-importers-review.md  area-8-plugin-system-review.md  area-9-git-sync-review.md  review-summary.md  (+2 more)
public/: dictionary-en.txt
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  title-mockups.html  vault-mockups.html
src-tauri/src/: bear_importer.rs  error.rs  fts.rs  git.rs  importer.rs  indexer.rs  lib.rs  main.rs  notion_importer.rs  query.rs  roam_importer.rs  search.rs  sync_log.rs  types.rs  utils.rs  vault.rs  watcher.rs
src-tauri/src/collab/: commands.rs  mod.rs  presence.rs  server.rs
src-tauri/src/vault/: export.rs  file_io.rs  file_ops.rs  history.rs  mod.rs  plugins.rs  settings.rs  themes.rs  trash.rs
tests/: r2-step.cjs  review-helper.cjs
(+376 files in other folders)
